--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/analytics": "^1.4.1",
     "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.11.0",
     "lucide-react": "^0.469.0",
     "next": "^15.3.2",
     "react": "^19.1.0",
